--- a/.github/workflows/opt-out-import-apply.yml
+++ b/.github/workflows/opt-out-import-apply.yml
@@ -1,12 +1,12 @@
-name: Terraform apply for opt-out-inbound
+name: Terraform apply for opt-out-import
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/opt-out-inbound-apply.yml
-      - terraform/services/opt-out-inbound/**
+      - .github/workflows/opt-out-import-apply.yml
+      - terraform/services/opt-out-import/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/opt-out-inbound
+        working-directory: ./terraform/services/opt-out-import
     strategy:
       matrix:
         app: [ab2d, bcda, dpc]
