--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -1,10 +1,10 @@
-name: Terraform plan for opt-out-inbound
+name: Terraform plan for opt-out-import
 
 on:
   pull_request:
     paths:
-      - .github/workflows/opt-out-inbound-plan.yml
-      - terraform/services/opt-out-inbound/**
+      - .github/workflows/opt-out-import-plan.yml
+      - terraform/services/opt-out-import/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-inbound
+      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-import
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/opt-out-inbound
+        working-directory: ./terraform/services/opt-out-import
     strategy:
       matrix:
         app: [ab2d, bcda, dpc]
