--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -27,24 +27,14 @@ jobs:
     strategy:
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [dev, test, sbx, prod]
+        environment: [dev, test, sbx, prod]
         include:
           - app: ab2d
-            env: dev
-            role: ${{ vars.AB2D_DEV_ROLE }}
-          - app: ab2d
-            env: test
-            role: ${{ vars.AB2D_TEST_ROLE }} # Maps to AB2D IMPL account
-          - app: ab2d
-            env: sbx
-            role: ${{ vars.AB2D_SBX_ROLE }}
-          - app: ab2d
-            env: prod
-            role: ${{ vars.AB2D_PROD_ROLE }}
+            role: ${{ vars.AB2D_ROLE }}
           - app: bcda
             role: ${{ vars.BCDA_ROLE }}
           - app: dpc
-            role: ${{ vars.BCDA_ROLE }}
+            role: ${{ vars.DPC_ROLE }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
@@ -52,8 +42,8 @@ jobs:
         with:
           role-to-assume: ${{ matrix.role }}
           aws-region: us-east-1
-      - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
+      - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.environment }}.s3.tfbackend
       - run: terraform plan
         env:
           TF_VAR_app: ${{ matrix.app }}
-          TF_VAR_env: ${{ matrix.env }}
+          TF_VAR_env: ${{ matrix.environment }}
