Try environment vars in matrix

--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -32,7 +32,7 @@ jobs:
         env: [dev]
         include:
           - app: ab2d
-            role_var: "AB2D_ROLE"
+            role: ${{ vars.AB2D_ROLE }}
           #- app: bcda
           #  role: ${{ vars.BCDA_ROLE }}
           #- app: dpc
@@ -43,7 +43,7 @@ jobs:
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars[matrix.role_var] }}
+          role-to-assume: ${{ matrix.role }}
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
       - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
