Set fail-fast to run all plans even if some fail

--- a/.github/workflows/tfstate-plan.yml
+++ b/.github/workflows/tfstate-plan.yml
@@ -25,6 +25,7 @@ jobs:
       run:
         working-directory: ./terraform/services/tfstate
     strategy:
+      fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
         environment: [dev, test, sbx, prod]
