--- a/.github/workflows/tfstate-plan.yml
+++ b/.github/workflows/tfstate-plan.yml
@@ -28,33 +28,19 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        environment: [dev, test, sbx, prod]
+        env: [dev, test, sbx, prod]
         include:
-          - app: ab2d
-            env: dev
-            role: ${{ vars.AB2D_DEV_ROLE }}
-          - app: ab2d
-            env: test
-            role: ${{ vars.AB2D_TEST_ROLE }} # Maps to AB2D IMPL account
-          - app: ab2d
-            env: sbx
-            role: ${{ vars.AB2D_SBX_ROLE }}
-          - app: ab2d
-            env: prod
-            role: ${{ vars.AB2D_PROD_ROLE }}
           - app: bcda
-            role: ${{ vars.BCDA_ROLE }}
-          - app: dpc
-            role: ${{ vars.BCDA_ROLE }}
+            env: mgmt
+    environment: ${{ matrix.app }}-${{ matrix.env }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ matrix.role }}
-          aws-region: us-east-1
+          role-to-assume: ${{ vars.DEPLOY_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
       - run: terraform plan
         env:
-          TF_VAR_app: ${{ matrix.app }}
-          TF_VAR_env: ${{ matrix.env }}
+          TF_VAR_name: ${{ matrix.app }}-${{ matrix.env }}
