--- a/.github/workflows/tfstate-apply.yml
+++ b/.github/workflows/tfstate-apply.yml
@@ -36,4 +36,4 @@ jobs:
       - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
       - run: terraform apply -auto-approve
         env:
-          TF_VAR_name: ${{ matrix.app }}-${{ matrix.env }}
+          TF_VAR_name: ${{ matrix.app }}-${{ matrix.env }}-tfstate
