--- a/.github/workflows/github-actions-runner-apply.yml
+++ b/.github/workflows/github-actions-runner-apply.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           role-to-assume: ${{ vars.DEPLOY_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ github.event.deployment.environment }}.s3.tfbackend
+      - run: terraform init -backend-config=../../backends/bcda-mgmt.s3.tfbackend
       - run: terraform apply -auto-approve
         env:
           TF_VAR_ami_account: ${{ vars.RUNNER_AMI_ACCOUNT }}
