--- a/.github/workflows/github-actions-deploy-role-apply.yml
+++ b/.github/workflows/github-actions-deploy-role-apply.yml
@@ -36,3 +36,7 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/${{ matrix.app}}-${{ matrix.env }}.s3.tfbackend
       - run: terraform apply -auto-approve
+        env:
+          TF_VAR_app_team: ${{ matrix.app }}
+          TF_VAR_app_env: ${{ matrix.env }}
+          TF_VAR_runner_arn: ${{ vars.RUNNER_ROLE }}
