--- a/.github/workflows/github-actions-deploy-role-plan.yml
+++ b/.github/workflows/github-actions-deploy-role-plan.yml
@@ -32,13 +32,12 @@ jobs:
         include:
           - app: bcda
             env: mgmt
-    environment: ${{ matrix.app }}-${{ matrix.env }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars.DEPLOY_ROLE }}
+          role-to-assume: ${{ vars[format('{0}_{1}_DEPLOY_ROLE, matrix.app, matrix.env)] }}
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/${{ matrix.app}}-${{ matrix.env }}.s3.tfbackend
       - run: terraform plan
