--- a/.github/workflows/github-actions-runner-apply.yml
+++ b/.github/workflows/github-actions-runner-apply.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars.DEPLOY_ROLE }}
+          role-to-assume: ${{ vars.BCDA_MGMT_DEPLOY_ROLE }}
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -backend-config=../../backends/bcda-mgmt.s3.tfbackend
       - run: terraform apply -auto-approve
