--- a/.github/workflows/github-actions-runner-plan.yml
+++ b/.github/workflows/github-actions-runner-plan.yml
@@ -30,13 +30,17 @@ jobs:
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars.RUNNER_ACCOUNT_ROLE }}
-          aws-region: us-east-1
-      - run: terraform init -reconfigure -backend-config=../../backends/bcda-mgmt.s3.tfbackend
-      - run: terraform plan
+          role-to-assume: ${{ vars.BCDA_MGMT_DEPLOY_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
+      - run: terraform init -backend-config=../../backends/bcda-mgmt.s3.tfbackend
+      - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
         env:
-          TF_VAR_ami_account: ${{ vars.RUNNER_AMI_ACCOUNT }}
-          TF_VAR_ami_filter: ${{ vars.RUNNER_AMI_FILTER }}
-          TF_VAR_app_id: ${{ vars.RUNNER_APP_ID }}
-          TF_VAR_key_base64: ${{ secrets.RUNNER_APP_KEY_BASE64 }}
-          TF_VAR_webhook_secret: ${{ secrets.RUNNER_WEBHOOK_SECRET }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
+        with:
+          params: |
+            TF_VAR_ami_account=/github-runner/ami-account
+            TF_VAR_ami_filter=/github-runner/ami-filter
+            TF_VAR_app_id=/github-runner/app-id
+            TF_VAR_key_base64=/github-runner/app-key-base64
+            TF_VAR_webhook_secret=/github-runner/webhook-secret
+      - run: terraform plan
