--- a/.github/workflows/build-runner-images.yml
+++ b/.github/workflows/build-runner-images.yml
@@ -19,9 +19,6 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    env:
-      AMI_ACCOUNT: ${{ vars.RUNNER_AMI_ACCOUNT }}
-      AMI_FILTER: ${{ vars.RUNNER_AMI_FILTER }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -30,7 +27,13 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: ${{ vars.BCDA_MGMT_DEPLOY_ROLE }}
-          aws-region: us-east-1
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
+        with:
+          params: |
+            AMI_ACCOUNT=/gold-image/account
+            AMI_FILTER=/gold-image/filter
 
       - name: Retrieve default VPC ID and subnet
         id: vpc
