--- a/.github/workflows/build-runner-images.yml
+++ b/.github/workflows/build-runner-images.yml
@@ -8,7 +8,7 @@ on:
     # 00:00 on Monday each week
     - cron: "0 0 * * 1"
   workflow_dispatch:
-    
+
 jobs:
   build-image:
     name: Build
@@ -19,9 +19,6 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    env:
-      AMI_ACCOUNT: ${{ vars.RUNNER_AMI_ACCOUNT }}
-      AMI_FILTER: ${{ vars.RUNNER_AMI_FILTER }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,8 +26,14 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars.RUNNER_ACCOUNT_ROLE }}
-          aws-region: us-east-1
+          role-to-assume: ${{ vars.BCDA_MGMT_DEPLOY_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
+        with:
+          params: |
+            AMI_ACCOUNT=/gold-image/account
+            AMI_FILTER=/gold-image/filter
 
       - name: Retrieve default VPC ID and subnet
         id: vpc
