--- a/.github/workflows/github-actions-runner-apply.yml
+++ b/.github/workflows/github-actions-runner-apply.yml
@@ -1,12 +1,12 @@
-name: Terraform apply for github-actions terraform
+name: Terraform apply for github-actions-runner terraform
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/github-actions-terraform-apply.yml
-      - terraform/services/github-actions/**
+      - .github/workflows/github-actions-runner-apply.yml
+      - terraform/services/github-actions-runner/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/github-actions
+        working-directory: ./terraform/services/github-actions-runner
     environment: bcda-mgmt
     steps:
       - uses: actions/checkout@v4
