--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -25,31 +25,29 @@ jobs:
       run:
         working-directory: ./terraform/services/opt-out-import
     strategy:
+      fail-fast: false
       matrix:
-        #app: [ab2d, bcda, dpc]
-        app: [ab2d]
-        #env: [dev, test, sbx, prod]
-        env: [dev]
+        app: [ab2d, bcda, dpc]
+        env: [dev, test, sbx, prod]
         include:
           - app: ab2d
             handler: gov.cms.ab2d.optout.OptOutHandler
             runtime: java11
-          #- app: bcda
-          #  role: ${{ vars.BCDA_ROLE }}
-          #- app: dpc
-          #  role: ${{ vars.DPC_ROLE }}
-    environment: ${{ matrix.app }}-${{ matrix.env }}
+          - app: bcda
+            handler: bootstrap
+            runtime: provided.al2
+          - app: dpc
+            handler: bootstrap
+            runtime: provided.al2
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
       - uses: aws-actions/configure-aws-credentials@v3
         with:
-          role-to-assume: ${{ vars.DEPLOY_ROLE }}
+          role-to-assume: ${{ vars[format('{0}_{1}_DEPLOY_ROLE', matrix.app, matrix.env)] }}
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
       - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
-        env:
-          AWS_REGION: ${{ vars.AWS_REGION }}
         with:
           params: |
             TF_VAR_bfd_bucket_role_arn=/opt-out-import/bfd-bucket-role-arn
