--- a/.github/workflows/opt-out-import-apply.yml
+++ b/.github/workflows/opt-out-import-apply.yml
@@ -14,25 +14,14 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform/services/opt-out-import
     strategy:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
-    environment: ${{ matrix.app }}-${{ matrix.env }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars[format('{0}_{1}_DEPLOY_ROLE', matrix.app, matrix.env)] }}
-          aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform apply -auto-approve
-        env:
-          TF_VAR_app_team: ${{ matrix.app }}
-          TF_VAR_app_env: ${{ matrix.env }}
+    uses: ./.github/workflows/tf-cmd.yml@main
+    with:
+      app: ${{ matrix.app }}
+      env: ${{ matrix.env }}
+      dir: ./terraform/services/opt-out-import
+      cmd: apply -auto-approve
