--- a/.github/workflows/opt-out-import-apply.yml
+++ b/.github/workflows/opt-out-import-apply.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
-    uses: ./.github/workflows/tf-cmd.yml
+    uses: ./.github/workflows/terraform-command.yml
     with:
       app: ${{ matrix.app }}
       env: ${{ matrix.env }}
