--- a/.github/workflows/github-actions-oidc-provider-apply.yml
+++ b/.github/workflows/github-actions-oidc-provider-apply.yml
@@ -14,10 +14,6 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform/services/github-actions-oidc-provider
     strategy:
       fail-fast: false
       matrix:
@@ -26,13 +22,9 @@ jobs:
         include:
           - app: bcda
             env: mgmt
-    environment: ${{ matrix.app }}-${{ matrix.env }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars[format('{0}_{1}_DEPLOY_ROLE', matrix.app, matrix.env)] }}
-          aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: terraform apply -auto-approve
+    uses: ./.github/workflows/terraform-command.yml
+    with:
+      app: ${{ matrix.app }}
+      env: ${{ matrix.env }}
+      dir: ./terraform/services/github-actions-oidc-provider
+      cmd: apply -auto-approve
