--- a/.github/workflows/terraform-command.yml
+++ b/.github/workflows/terraform-command.yml
@@ -55,4 +55,7 @@ jobs:
           role-to-assume: ${{ vars[format('{0}_{1}_DEPLOY_ROLE', inputs.app, inputs.env)] }}
           aws-region: ${{ vars.AWS_REGION }}
       - run: terraform init -reconfigure -backend-config=../../backends/${{ inputs.app }}-${{ inputs.env }}.s3.tfbackend
-      - run: terraform ${{ inputs.cmd }} -var app=${{ inputs.app }} -var env=${{ inputs.env }}
+      - run: terraform ${{ inputs.cmd }}
+        env:
+          TF_VAR_app: ${{ matrix.app }}
+          TF_VAR_env: ${{ matrix.env }}
