--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -20,41 +20,14 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./terraform/services/opt-out-import
     strategy:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
-        include:
-          - app: ab2d
-            handler: gov.cms.ab2d.optout.OptOutHandler
-            runtime: java11
-          - app: bcda
-            handler: bootstrap
-            runtime: provided.al2
-          - app: dpc
-            handler: bootstrap
-            runtime: provided.al2
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./actions/setup-tfenv-terraform
-      - uses: aws-actions/configure-aws-credentials@v3
-        with:
-          role-to-assume: ${{ vars[format('{0}_{1}_DEPLOY_ROLE', matrix.app, matrix.env)] }}
-          aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -reconfigure -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
-        with:
-          params: |
-            TF_VAR_bfd_bucket_role_arn=/opt-out-import/${{ matrix.app }}/${{ matrix.env }}/bfd-bucket-role-arn
-            TF_VAR_bfd_sns_topic_arn=/opt-out-import/${{ matrix.app }}/${{ matrix.env }}/bfd-sns-topic-arn
-      - run: terraform plan
-        env:
-          TF_VAR_app_team: ${{ matrix.app }}
-          TF_VAR_app_env: ${{ matrix.env }}
-          TF_VAR_lambda_handler: ${{ matrix.handler }}
-          TF_VAR_lambda_runtime: ${{ matrix.runtime }}
+    uses: ./.github/workflows/terraform-command.yml
+    with:
+      app: ${{ matrix.app }}
+      env: ${{ matrix.env }}
+      dir: ./terraform/services/opt-out-import
+      cmd: plan
