--- a/.github/workflows/build-runner-images.yml
+++ b/.github/workflows/build-runner-images.yml
@@ -33,8 +33,8 @@ jobs:
       - uses: cmsgov/ab2d-bcda-dpc-platform/actions/aws-params-env-action@main
         with:
           params: |
-            AMI_ACCOUNT=/github-runner/gold-image-account
-            AMI_FILTER=/github-runner/gold-image-filter
+            AMI_ACCOUNT=/github-runner/ami-account
+            AMI_FILTER="github-actions-runner-*"
 
       - name: Retrieve default VPC ID and subnet
         id: vpc
