--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     paths:
       - .github/workflows/opt-out-import-plan.yml
+      - terraform/modules/lambda/**
+      - terraform/modules/queue/**
+      - terraform/modules/subnets/**
+      - terraform/modules/vpc/**
       - terraform/services/opt-out-import/**
   workflow_dispatch: # Allow manual trigger
 
