--- a/.github/workflows/github-actions-role-plan.yml
+++ b/.github/workflows/github-actions-role-plan.yml
@@ -1,10 +1,10 @@
-name: Terraform plan for github-actions-oidc-provider
+name: github-actions-role plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/github-actions-oidc-provider-plan.yml
-      - terraform/services/github-actions-oidc-provider/**
+      - .github/workflows/github-actions-role-plan.yml
+      - terraform/services/github-actions-role/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/github-actions-oidc-provider
+      - run: terraform fmt -check -diff -recursive terraform/services/github-actions-role
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -23,11 +23,11 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/github-actions-oidc-provider
+        working-directory: ./terraform/services/github-actions-role
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d]
+        app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
         include:
           - app: bcda
