--- a/.github/workflows/opt-out-test-plan.yml
+++ b/.github/workflows/opt-out-test-plan.yml
@@ -1,10 +1,13 @@
-name: Terraform plan for github-actions-oidc-provider
+name: opt-out-test plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/github-actions-oidc-provider-plan.yml
-      - terraform/services/github-actions-oidc-provider/**
+      - .github/workflows/opt-out-test-plan.yml
+      - terraform/modules/bucket/**
+      - terraform/modules/key/**
+      - terraform/modules/topic/**
+      - terraform/services/opt-out-test/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/github-actions-oidc-provider
+      - run: terraform fmt -check -diff -recursive terraform/services/opt-out-test
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -23,15 +26,15 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/github-actions-oidc-provider
+        working-directory: ./terraform/services/opt-out-test
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d]
+        app: [ab2d, bcda, dpc]
         env: [dev, test, sbx, prod]
-        include:
-          - app: bcda
-            env: mgmt
+    env:
+      TF_VAR_app: ${{ matrix.app }}
+      TF_VAR_env: ${{ matrix.env }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
@@ -39,8 +42,5 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ matrix.app == 'ab2d' && secrets[format('{0}_{1}_ACCOUNT', matrix.app, matrix.env)] || secrets.BCDA_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
-      - run: terraform init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
+      - run: terraform init -reconfigure -backend-config=../../backends/$TF_VAR_app-$TF_VAR_env.s3.tfbackend
       - run: terraform plan
-        env:
-          TF_VAR_app: ${{ matrix.app }}
-          TF_VAR_env: ${{ matrix.env }}
