--- a/.github/workflows/opt-out-import-plan.yml
+++ b/.github/workflows/opt-out-import-plan.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - .github/workflows/opt-out-import-plan.yml
+      - terraform/modules/key/**
       - terraform/modules/lambda/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
