--- a/.github/workflows/snyk-ecr-integration-plan.yml
+++ b/.github/workflows/snyk-ecr-integration-plan.yml
@@ -1,10 +1,10 @@
-name: snyk-ecr-integration plan terraform
+name: snyk-integration plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/snyk-ecr-integration-plan.yml
-      - terraform/services/snyk-ecr-integration/**
+      - .github/workflows/snyk-integration-plan.yml
+      - terraform/services/snyk-integration/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/snyk-ecr-integration
+      - run: terraform fmt -check -diff -recursive terraform/services/snyk-integration
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/snyk-ecr-integration
+        working-directory: ./terraform/services/snyk-integration
     strategy:
       fail-fast: false
       matrix:
