--- a/.github/workflows/github-actions-role-apply.yml
+++ b/.github/workflows/github-actions-role-apply.yml
@@ -22,8 +22,10 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [mgmt, dev, test, sbx, prod]
+        env: [dev, test, sbx, prod]
         include:
+          - app: ab2d
+            env: mgmt
           - app: bcda
             env: mgmt
     steps:
