Add vpc module dependency in workflows

--- a/.github/workflows/github-actions-access-apply.yml
+++ b/.github/workflows/github-actions-access-apply.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - .github/workflows/github-actions-access-apply.yml
       - terraform/services/github-actions-access/**
+      - terraform/modules/vpc/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
