--- a/.github/workflows/api-waf-sync-plan.yml
+++ b/.github/workflows/api-waf-sync-plan.yml
@@ -1,16 +1,16 @@
-name: waf-sync plan terraform
+name: api-waf-sync plan terraform
 
 on:
   pull_request:
     paths:
-      - .github/workflows/waf-sync-plan.yml
+      - .github/workflows/api-waf-sync-plan.yml
       - terraform/modules/bucket/**
       - terraform/modules/key/**
       - terraform/modules/function/**
       - terraform/modules/queue/**
       - terraform/modules/subnets/**
       - terraform/modules/vpc/**
-      - terraform/services/waf-sync/**
+      - terraform/services/api-waf-sync/**
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/setup-tfenv-terraform
-      - run: terraform fmt -check -diff -recursive terraform/services/waf-sync
+      - run: terraform fmt -check -diff -recursive terraform/services/api-waf-sync
 
   terraform-plan:
     needs: check-terraform-fmt
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform/services/waf-sync
+        working-directory: ./terraform/services/api-waf-sync
     strategy:
       fail-fast: false
       matrix:
